--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.4.3",
 		"jest-environment-jsdom": "^29.4.3",
+		"jest-styled-components": "^7.1.1",
 		"lint-staged": "^13.1.2",
 		"prettier": "^2.8.4",
 		"styled-components": "^5.3.8",
