--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"eslint-plugin-simple-import-sort": "^10.0.0",
 		"eslint-plugin-sonarjs": "^0.18.0",
 		"eslint-plugin-testing-library": "^5.10.2",
+		"framer-motion": "^10.9.1",
 		"husky": "^8.0.3",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.4.3",
