--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 	"dependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-icons": "^4.8.0"
+		"react-icons": "^4.8.0",
+		"styled-components": "^5.3.9"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.21.3",
@@ -51,7 +52,6 @@
 		"jest-styled-components": "^7.1.1",
 		"lint-staged": "^13.1.2",
 		"prettier": "^2.8.4",
-		"styled-components": "^5.3.8",
 		"ts-jest": "^29.0.5",
 		"typescript": "^4.9.3",
 		"vite": "^4.2.0"
