--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
 		"react-router-dom": "^6.10.0",
+		"react-select": "^5.7.2",
 		"styled-components": "^5.3.9"
 	},
 	"devDependencies": {
