--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	},
 	"dependencies": {
 		"moment": "^2.29.4",
+		"axios": "^1.3.4",
+		"cors": "^2.8.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
@@ -26,6 +28,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^14.0.0",
 		"@testing-library/user-event": "^14.4.3",
+		"@types/axios": "^0.14.0",
 		"@types/jest": "^29.4.0",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
