--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
-		"moment": "^2.29.4",
 		"axios": "^1.3.4",
 		"cors": "^2.8.5",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-icons": "^4.8.0",
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.21.3",
 		"@commitlint/cli": "^17.4.4",
+		"@faker-js/faker": "^7.6.0",
 		"@swc/core": "^1.3.37",
 		"@swc/jest": "^0.2.24",
 		"@testing-library/dom": "^9.0.0",
