--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.10.6",
+		"@emotion/styled": "^11.10.6",
+		"@mui/material": "^5.12.1",
 		"axios": "^1.3.4",
 		"cors": "^2.8.5",
 		"moment": "^2.29.4",
