--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
 		"@vitejs/plugin-react-swc": "^3.0.0",
 		"babel-loader": "^8.3.0",
 		"commitlint-config-gitmoji": "^2.3.1",
-		"eslint": "8.35.0",
+		"eslint": "^8.35.0",
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-import-resolver-typescript": "^3.5.3",
 		"eslint-plugin-import": "^2.27.5",
