--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,6 @@
   "bracketSpacing": true,
   "useTabs": true,
   "bracketSameLine": false,
-  "tabWidth": 1
+  "singleQuote": true,
+  "tabWidth": 2
 }
