feat: geocode and maps

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VITE_BACKEND_URL=http://localhost:8081
+#VITE_BACKEND_URL=http://localhost:8081
+VITE_BACKEND_URL=https://safe-food-api.azurewebsites.net
 VITE_PROJECT_NAME=Safe Food
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyB7mSFQ7nGJm8ky0uUp6bpKWzD1l66Qxb4
