--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@emotion/react": "^11.10.6",
 		"@emotion/styled": "^11.10.6",
 		"@mui/material": "^5.12.1",
+		"@react-google-maps/api": "^2.18.1",
 		"@types/googlemaps": "^3.43.3",
 		"axios": "^1.3.4",
 		"cors": "^2.8.5",
