--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_BACKEND_URL=http://localhost:8081
+# VITE_BACKEND_URL=http://localhost:8081
+VITE_BACKEND_URL=https://safe-food-api.azurewebsites.net/
 VITE_PROJECT_NAME=Safe Food
